--- a/package.json
+++ b/package.json
@@ -1,19 +1,32 @@
 {
-  "name": "teenyurl_backend",
-  "version": "1.0.0",
-  "description": "A URL shortening API",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/marcocadete/teenyURL_backend.git"
-  },
-  "author": "Marco Cadete",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/marcocadete/teenyURL_backend/issues"
-  },
-  "homepage": "https://github.com/marcocadete/teenyURL_backend#readme"
+    "name": "teenyurl_backend",
+    "version": "1.0.0",
+    "description": "A URL shortening API",
+    "main": "app.js",
+    "scripts": {
+        "start": "NODE_ENV=production node app.js",
+        "dev": "NODE_ENV=development nodemon app.js",
+        "test": "NODE_ENV=test jest"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/marcocadete/teenyURL_backend.git"
+    },
+    "author": "Marco Cadete",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/marcocadete/teenyURL_backend/issues"
+    },
+    "homepage": "https://github.com/marcocadete/teenyURL_backend#readme",
+    "dependencies": {
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1"
+    },
+    "devDependencies": {
+        "eslint": "^7.18.0",
+        "faker": "^5.1.0",
+        "nodemon": "^2.0.7",
+        "prettier": "^2.2.1",
+        "supertest": "^6.1.1"
+    }
 }
