--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "homepage": "https://github.com/marcocadete/teenyURL_backend#readme",
     "dependencies": {
         "dotenv": "^8.2.0",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "mysql2": "^2.2.5"
     },
     "devDependencies": {
         "eslint": "^7.18.0",
         "faker": "^5.1.0",
+        "jest": "^26.6.3",
         "nodemon": "^2.0.7",
         "prettier": "^2.2.1",
         "supertest": "^6.1.1"
