--- a/package.json
+++ b/package.json
@@ -1,34 +1,35 @@
 {
-    "name": "teenyurl_backend",
-    "version": "1.0.0",
-    "description": "A URL shortening API",
-    "main": "app.js",
-    "scripts": {
-        "start": "NODE_ENV=production node app.js",
-        "dev": "NODE_ENV=development nodemon app.js",
-        "test": "NODE_ENV=test jest"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/marcocadete/teenyURL_backend.git"
-    },
-    "author": "Marco Cadete",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/marcocadete/teenyURL_backend/issues"
-    },
-    "homepage": "https://github.com/marcocadete/teenyURL_backend#readme",
-    "dependencies": {
-        "dotenv": "^8.2.0",
-        "express": "^4.17.1",
-        "mysql2": "^2.2.5"
-    },
-    "devDependencies": {
-        "eslint": "^7.18.0",
-        "faker": "^5.1.0",
-        "jest": "^26.6.3",
-        "nodemon": "^2.0.7",
-        "prettier": "^2.2.1",
-        "supertest": "^6.1.1"
-    }
+  "name": "teenyurl_backend",
+  "version": "1.0.0",
+  "description": "A URL shortening API",
+  "main": "app.js",
+  "scripts": {
+    "start": "NODE_ENV=production node app.js",
+    "dev": "NODE_ENV=development nodemon app.js",
+    "test": "jest"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/marcocadete/teenyURL_backend.git"
+  },
+  "author": "Marco Cadete",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/marcocadete/teenyURL_backend/issues"
+  },
+  "homepage": "https://github.com/marcocadete/teenyURL_backend#readme",
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-validator": "^6.9.2",
+    "mysql2": "^2.2.5"
+  },
+  "devDependencies": {
+    "eslint": "^7.18.0",
+    "faker": "^5.1.0",
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.7",
+    "prettier": "^2.2.1",
+    "supertest": "^6.1.1"
+  }
 }
