--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
+    "sinon": "^9.2.3",
     "supertest": "^6.1.1"
   }
 }
